--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,6 +8,7 @@
   background-color: #f8f9fa;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
+
 .navbar-brand {
   margin-right: auto;
   padding: 0;
@@ -16,127 +17,69 @@
 
 .navbar-brand img {
   height: 100px;
-   /* Set height of logo */
 }
 
-/* Styles for smaller screens */
-@media (max-width: 768px) {
+@media (max-width: 776px) {
   .navbar {
-    flex-direction: column; /* Change flex direction */
-    height: auto; /* Remove fixed height */
+    flex-direction: column;
+    height: auto;
   }
+
   .navbar-brand {
-     /* Decrease font size */
-    margin-right: auto; /* Remove margin-right */
-    margin-left: 0; /* Add margin-left */
+    margin-right: 90px;
+    margin-left: auto;
   }
+
   .navbar-brand img {
-    transform: scale(1.5); /* Scale logo */
-  }
-  .navbar-nav:first-child .navbar-nav {
-    margin-left: 0; /* Remove margin-left */
-  }
-
-  .navbar-nav {
-    flex-direction: column; /* Change flex direction */
-    margin-top: 10px; /* Add margin to top */
-  }
-
-  .nav-item {
-    margin-right: 0; /* Remove margin */
-  }
-
-  .dropdown-menu {
-    position: static; /* Change position */
-    display: none; /* Hide by default */
-  }
-
-  .dropdown:hover .dropdown-menu {
-    display: block; /* Show on hover */
-  }
-
-  .navbar-toggler {
-    display: block; /* Show hamburger menu */
+    height: 100px;
+    transform: none;
   }
 
   .navbar-collapse {
-    display: none; /* Hide by default */
+    margin-top: 10px;
   }
-
-  .navbar-toggler:focus + .navbar-collapse {
-    display: block; /* Show on click */
-  }
-
 }
 
+@media (min-width: 577px) {
+  .navbar {
+    flex-direction: row;
+    height: 80px;
+  }
 
-// .navbar {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   height: 80px;
-//   line-height: 80px;
-//   padding: 0 20px;
-// }
+  .navbar-brand {
+    margin-right: auto;
+    margin-left: 90px;
+  }
 
-// .navbar-brand {
-//   padding: 0 10px;
-//   height: 100px;
-//   width: 100px;
-//   margin-right: 5px;
-//   margin-top: auto;
+  .navbar-brand img {
+    height: 90px;
+    transform: none;
+  }
 
-// }
-// .navbar-nav:first-child {
-//   margin-right: auto;
-// }
+  .navbar-collapse {
+    margin-top: 0;
+  }
+}
 
-// .navbar-nav {
-//   padding: 0 10px;
-// }
+.avatar {
+  border-radius: 50%;
+  height: 30px;
+  margin-left: 15px;
+}
 
-// .nav-link {
-//   padding: 0 10px;
-//   margin-left: auto;
-// }
-// .navbar-toggler {
-//   padding: 0.25rem 0.5rem;
-// }
+.dropdown-toggle::after {
+  display: none;
+}
 
-// .navbar-custom {
-//   background-color: hsl(0, 0%, 100%);
-// }
-// .navbar-custom .navbar-nav .nav-link {
-//   color: rgb(29, 27, 27);
-// }
+.dropdown-menu {
+  border-radius: 0;
+}
 
+.dropdown-item:hover {
+  background-color: #f8f9fa;
+}
 
-// .navbar-custom .navbar-nav .nav-link {
-//   font-size: 1.2rem;
-// }
-
-// .navbar-custom {
-//   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-// }
-
-
-// /* Style the dropdown menu */
-// .navbar-nav .dropdown-menu {
-//   position: absolute;
-//   top: 100%;
-//   left: 0;
-//   z-index: 1000;
-// }
-
-// /* Style the dropdown menu links */
-// .navbar-nav .dropdown-menu a {
-//   display: block;
-//   padding: 8px 20px;
-//   color: #103ff9;
-//   text-decoration: none;
-// }
-
-// /* Style the dropdown menu links on hover */
-// .navbar-nav .dropdown-menu a:hover {
-//   background-color: #3d0cec;
-// }
+.dropdown-menu-end {
+  right: 0;
+  left: auto;
+}
