--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,30 +1,39 @@
 .simple-calendar {
+  border: 1px solid #ccc;
   overflow-x: scroll;
-
   table {
     min-height: 80vh;
   }
   .today {
     background: linear-gradient(to top, #EEF4ED, #bbc1ef);
   }
-
 }
 
-.titre-calendar {
-  color: black;
-  margin-top: 7px;
+.calendar-title h1 {
+  font-weight: bolder;
+  font-family: serif;
+  font-size: 30px;
+}
+
+.weekend {
+  background-color: #f0f0f0;
+}
+
+td:hover {
+  background-color: #f5f5f5;
 }
 
 .meeting {
   color: white;
-  padding: 8px 24px;
+  padding: 6px;
+  margin: 5px;
   border-radius: 4px;
   background: #1EDD88;
   transition: background 0.3s ease;
 }
 
 .meeting:hover {
-  background: #1BCB7F;
+  background: #336550;
   color: white;
 }
 
@@ -37,11 +46,21 @@ table {
   td {
     width: 100px;
   }
-  
+
 }
 
 .calendar-title h1 {
   font-weight: bolder;
   font-family: serif;
   font-size: 30px;
+}
+
+.titre-calendar {
+  color: black;
+  margin-top: 7px;
+}
+
+.d-flex.justify-content-center {
+  display: flex;
+  justify-content: center;
 }
