--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,14 @@
 // Specific CSS for your home-page
 @import "components/navbar";
 
+.container{
+  max-width: 100%;
+  width: 100%;
+  padding: 1rem;
+}
+
 .premier-para {
-  background-color: #B9CDDA;
+  background-color: #9AC0CF;
   padding-top: 0.1px;
 }
 
@@ -23,7 +29,7 @@
   border-style: solid;
   border-width: 3px;
   border-radius: 8px;
-  background-image: linear-gradient(300deg, #4dc390, #4381C1);
+  background-image: linear-gradient(300deg, #51c995, #4381C1);
   transition-duration: 200ms;
   color: #d2edff;
   font-size: 16px;
@@ -38,7 +44,7 @@
   border-style: solid;
   border-width: 3px;
   border-radius: 8px;
-  color: #409e75;
+  color: black;
   font-size: 16px;
   line-height: 20px;
   font-weight: 500;
@@ -49,7 +55,7 @@
 .second-para {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #ffffff;
+  background-color: #fcffe2;
 }
 
 .title-h2-home {
@@ -96,7 +102,7 @@
 }
 
 .fourth-para {
-  background-color: #98be9c;
+  background-color: #C7DCC5;
 }
 
 .title-fourth {
