--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,18 +1,34 @@
 .simple-calendar {
   border: 1px solid #ccc;
   overflow-x: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
   table {
-    min-height: 80vh;
+    min-height: 20vh;
+    max-width: 40vh;
   }
   .today {
     background: linear-gradient(to top, #EEF4ED, #bbc1ef);
   }
 }
 
+
 .calendar-title h1 {
   font-weight: bolder;
   font-family: serif;
-  font-size: 30px;
+  font-size: 25px;
+  margin-top: 5px;
+  margin-block-end: 5px;
+}
+
+.titre-calendar {
+  color: black;
+  margin-top: 5px;
+  margin-block-end: 5px;
+  justify-content: center;
 }
 
 .weekend {
@@ -49,18 +65,10 @@ table {
 
 }
 
-.calendar-title h1 {
-  font-weight: bolder;
-  font-family: serif;
-  font-size: 30px;
-}
 
-.titre-calendar {
-  color: black;
-  margin-top: 7px;
-}
 
 .d-flex.justify-content-center {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
