--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -1,12 +1,12 @@
 <div class="d-flex justify-content-center">
   <div class="simple-calendar">
-    <div class="calendar-heading justify-content-center">
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-      <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+    <div class="calendar-heading">
+      <%= link_to t('simple_calendar.previous', default: 'Previous', class: "justify-content-start"), calendar.url_for_previous_view %>
+        <span class="calendar-title justify-content-center"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
+      <%= link_to t('simple_calendar.next', default: 'Next', class: "justify-content-end"), calendar.url_for_next_view %>
     </div>
 
-    <table class="table table-striped">
+    <table class="table table-striped justify-content-center">
       <thead>
         <tr>
           <% date_range.slice(0, 7).each do |day| %>
