--- a/app/assets/stylesheets/components/_form_new_missions.scss
+++ b/app/assets/stylesheets/components/_form_new_missions.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .container-form-new {
   margin-top: 50px;
 }
@@ -28,6 +24,7 @@
 .btn-primary {
   background-color: #1EDD88;
   border-color: #1EDD88;
+  justify-content: center;
 }
 
 .btn-primary:hover {
@@ -41,4 +38,11 @@
 
 .link_to_form:hover {
   color: #1BCB7F;
+}
+
+.main-w3layouts.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
