--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -199,7 +199,6 @@
   border-top-left-radius: 10px;
 }
 
-/* Underline From Center */
 .hvr-underline-from-center {
   display: inline-block;
   vertical-align: middle;
@@ -274,7 +273,7 @@
 }
 
 .image-b-profile {
-  min-width: 100vw;
+  max-width: 100vw;
   border-radius: 10px;
 }
 
