--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,6 +18,7 @@
   font-weight: bold;
   font-family: serif;
   font-size: 44px;
+  color: #574F48;
 }
 
 .sous-titre{
@@ -55,7 +56,7 @@
 .second-para {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #fcffe2;
+  background-color: white;
 }
 
 .title-h2-home {
@@ -143,13 +144,13 @@
   display: flex;
   width: max-content;
   align-items: center;
-  animation: carousel 3s linear infinite;
-  gap: 4px;
-  animation-direction: alternate;
+  animation: carousel 3.3s linear infinite;
+  gap: 8px;
+  animation-direction: alternate-reverse;
 }
 
 .logo-item img {
-  width: 300px;
+  width: 60px;
   height: auto;
 }
 
